Update home page content and personalize welcome message
The title of the page has been changed from "Home Page" to "Hello!".
The heading text has been updated from "Welcome" to "Welcome Ekrem Buğra Uyar".
The paragraph content has been modified from a link to ASP.NET Core documentation to a simple text stating "My First MVC Web Application".

--- a/MVC/Views/Home/Index.cshtml
+++ b/MVC/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Hello!";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome Ekrem Buğra Uyar</h1>
+    <p>My First MVC Web Application</p>
 </div>
